# format-tools

./: .editorconfig  .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: check-encoding.mjs  clean.mjs  release-portable.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActionButton.tsx  CompareToolbar.tsx  CompareWorkspace.tsx  CornerHamster.tsx  CronToolbar.tsx  CronWorkspace.tsx  EditorPanel.tsx  HistoryPanel.tsx  MonacoPane.tsx  OutputPreviewDialog.tsx  StatusBar.tsx  StructuredInput.tsx  StructuredOutput.tsx  Toolbar.tsx  WorkbenchDialog.tsx  WorkspaceSwitcher.tsx
src/hooks/: useClipboard.ts  useCompareWorkbench.ts  useCronWorkbench.ts  useFileTransfer.ts  useFormatter.ts  useHistoryRecords.ts  useHotkeys.ts  useTheme.ts  useWindowControls.ts
src/types/: index.ts
src/utils/: cronExpression.ts  detectFormatterMode.ts  errorMessage.ts  findBracketPair.ts  formatJson.ts  formatXml.ts  hamsterMessages.ts  heroMessages.ts  highlightCode.tsx  monacoEditor.ts  textStats.ts  workbenchMeta.ts
